--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -12,44 +12,45 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-15 Fri 11:24]
-| <75>                                                      |         |       |       |       |
-| Headline                                                  | Time    |       |       |     % |
-|-----------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                              | *79:55* |       |       | 100.0 |
-|-----------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                   | 79:55   |       |       | 100.0 |
-| Active                                                    |         | 79:55 |       | 100.0 |
-| Edit release notes for previous sprint                    |         |       |  3:36 |   4.5 |
-| Create a demo and presentation for previous sprint        |         |       |  1:39 |   2.1 |
-| Time spent producing coding videos                        |         |       |  2:22 |   3.0 |
-| Sprint and product backlog grooming                       |         |       |  6:09 |   7.7 |
-| Remove test model sanitizer                               |         |       |  0:20 |   0.4 |
-| Remove master headers                                     |         |       |  1:12 |   1.5 |
-| Fix the issues with tests in reference model              |         |       |  3:53 |   4.9 |
-| Update static strings to string views                     |         |       |  1:15 |   1.6 |
-| ODB include directories is incorrect                      |         |       |  1:43 |   2.1 |
-| Create a "modeling" report                                |         |       |  4:56 |   6.2 |
-| Move visual studio related options to top profile         |         |       |  0:17 |   0.4 |
-| Fix incorrect message keyword when detecting ODB includes |         |       |  0:29 |   0.6 |
-| Meta-data keys are in the inverse order                   |         |       |  0:39 |   0.8 |
-| Creating reference cycles produces strange errors         |         |       |  5:32 |   6.9 |
-| Error on duplicate references                             |         |       |  0:26 |   0.5 |
-| Generate model dependency graph                           |         |       |  1:55 |   2.4 |
-| Make the building of the relational model conditional     |         |       |  0:23 |   0.5 |
-| Make all transform contexts code-generated                |         |       |  0:08 |   0.2 |
-| Tracer numbering of dumped models is incorrect            |         |       |  0:26 |   0.5 |
-| Fix compilation errors in c++ impl nightly                |         |       |  0:24 |   0.5 |
-| Add support for meta-data overrides in Dogen              |         |       |  5:16 |   6.6 |
-| Some model names are too long for windows                 |         |       |  0:28 |   0.6 |
-| Fake type in injection.json model                         |         |       |  0:09 |   0.2 |
-| Time spent fixing emacs issues                            |         |       |  1:44 |   2.2 |
-| Move registrar into assets                                |         |       |  5:29 |   6.9 |
-| Upgrade to boost 1.70                                     |         |       | 10:00 |  12.5 |
-| Setup laptop to work on dogen                             |         |       |  0:45 |   0.9 |
-| Org-mode as a carrier format for modeling                 |         |       |  5:37 |   7.0 |
-| Add relational tracing support                            |         |       |  6:52 |   8.6 |
-| Split generated tests from manual tests                   |         |       |  5:51 |   7.3 |
+#+CAPTION: Clock summary at [2019-11-15 Fri 11:53]
+| <75>                                                       |         |       |       |       |
+| Headline                                                   | Time    |       |       |     % |
+|------------------------------------------------------------+---------+-------+-------+-------|
+| *Total time*                                               | *80:22* |       |       | 100.0 |
+|------------------------------------------------------------+---------+-------+-------+-------|
+| Stories                                                    | 80:22   |       |       | 100.0 |
+| Active                                                     |         | 80:22 |       | 100.0 |
+| Edit release notes for previous sprint                     |         |       |  3:36 |   4.5 |
+| Create a demo and presentation for previous sprint         |         |       |  1:39 |   2.1 |
+| Time spent producing coding videos                         |         |       |  2:22 |   2.9 |
+| Sprint and product backlog grooming                        |         |       |  6:09 |   7.7 |
+| Remove test model sanitizer                                |         |       |  0:20 |   0.4 |
+| Remove master headers                                      |         |       |  1:12 |   1.5 |
+| Fix the issues with tests in reference model               |         |       |  3:53 |   4.8 |
+| Update static strings to string views                      |         |       |  1:15 |   1.6 |
+| ODB include directories is incorrect                       |         |       |  1:43 |   2.1 |
+| Create a "modeling" report                                 |         |       |  4:56 |   6.1 |
+| Move visual studio related options to top profile          |         |       |  0:17 |   0.4 |
+| Fix incorrect message keyword when detecting ODB includes  |         |       |  0:29 |   0.6 |
+| Meta-data keys are in the inverse order                    |         |       |  0:39 |   0.8 |
+| Creating reference cycles produces strange errors          |         |       |  5:32 |   6.9 |
+| Error on duplicate references                              |         |       |  0:26 |   0.5 |
+| Generate model dependency graph                            |         |       |  1:55 |   2.4 |
+| Make the building of the relational model conditional      |         |       |  0:23 |   0.5 |
+| Make all transform contexts code-generated                 |         |       |  0:08 |   0.2 |
+| Tracer numbering of dumped models is incorrect             |         |       |  0:26 |   0.5 |
+| Fix compilation errors in c++ impl nightly                 |         |       |  0:24 |   0.5 |
+| Add support for meta-data overrides in Dogen               |         |       |  5:16 |   6.6 |
+| Some model names are too long for windows                  |         |       |  0:28 |   0.6 |
+| Fake type in injection.json model                          |         |       |  0:18 |   0.4 |
+| Add conditional logic for the inclusion of generated tests |         |       |  0:07 |   0.1 |
+| Time spent fixing emacs issues                             |         |       |  1:44 |   2.2 |
+| Move registrar into assets                                 |         |       |  5:29 |   6.8 |
+| Upgrade to boost 1.70                                      |         |       | 10:00 |  12.4 |
+| Setup laptop to work on dogen                              |         |       |  0:45 |   0.9 |
+| Org-mode as a carrier format for modeling                  |         |       |  5:37 |   7.0 |
+| Add relational tracing support                             |         |       |  6:52 |   8.5 |
+| Split generated tests from manual tests                    |         |       |  6:02 |   7.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -889,6 +890,7 @@ We need to rename the following models:
 *** COMPLETED Fake type in injection.json model                       :story:
     CLOSED: [2019-11-15 Fri 11:24]
     :LOGBOOK:
+    CLOCK: [2019-11-15 Fri 11:32]--[2019-11-15 Fri 11:41] =>  0:09
     CLOCK: [2019-11-15 Fri 11:15]--[2019-11-15 Fri 11:24] =>  0:09
     :END:
 
@@ -1248,6 +1250,7 @@ runs. The schema should be designed with this in mind.
 
 *** STARTED Split generated tests from manual tests                   :story:
     :LOGBOOK:
+    CLOCK: [2019-11-15 Fri 11:42]--[2019-11-15 Fri 11:53] =>  0:11
     CLOCK: [2019-11-14 Thu 08:13]--[2019-11-14 Thu 08:57] =>  0:44
     CLOCK: [2019-11-13 Wed 21:33]--[2019-11-13 Wed 22:52] =>  1:19
     CLOCK: [2019-11-13 Wed 21:31]--[2019-11-13 Wed 21:32] =>  0:01
