--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -12,18 +12,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-15 Fri 11:53]
+#+CAPTION: Clock summary at [2019-11-15 Fri 12:09]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *80:22* |       |       | 100.0 |
+| *Total time*                                               | *80:36* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 80:22   |       |       | 100.0 |
-| Active                                                     |         | 80:22 |       | 100.0 |
+| Stories                                                    | 80:36   |       |       | 100.0 |
+| Active                                                     |         | 80:36 |       | 100.0 |
 | Edit release notes for previous sprint                     |         |       |  3:36 |   4.5 |
-| Create a demo and presentation for previous sprint         |         |       |  1:39 |   2.1 |
+| Create a demo and presentation for previous sprint         |         |       |  1:39 |   2.0 |
 | Time spent producing coding videos                         |         |       |  2:22 |   2.9 |
-| Sprint and product backlog grooming                        |         |       |  6:09 |   7.7 |
+| Sprint and product backlog grooming                        |         |       |  6:09 |   7.6 |
 | Remove test model sanitizer                                |         |       |  0:20 |   0.4 |
 | Remove master headers                                      |         |       |  1:12 |   1.5 |
 | Fix the issues with tests in reference model               |         |       |  3:53 |   4.8 |
@@ -40,17 +40,19 @@
 | Make all transform contexts code-generated                 |         |       |  0:08 |   0.2 |
 | Tracer numbering of dumped models is incorrect             |         |       |  0:26 |   0.5 |
 | Fix compilation errors in c++ impl nightly                 |         |       |  0:24 |   0.5 |
-| Add support for meta-data overrides in Dogen               |         |       |  5:16 |   6.6 |
+| Add support for meta-data overrides in Dogen               |         |       |  5:16 |   6.5 |
 | Some model names are too long for windows                  |         |       |  0:28 |   0.6 |
 | Fake type in injection.json model                          |         |       |  0:18 |   0.4 |
 | Add conditional logic for the inclusion of generated tests |         |       |  0:07 |   0.1 |
+| Split generated tests from manual tests                    |         |       |  5:51 |   7.3 |
+| Use clang9 and GCC 9 in nightly and CI                     |         |       |  0:01 |   0.0 |
 | Time spent fixing emacs issues                             |         |       |  1:44 |   2.2 |
 | Move registrar into assets                                 |         |       |  5:29 |   6.8 |
 | Upgrade to boost 1.70                                      |         |       | 10:00 |  12.4 |
 | Setup laptop to work on dogen                              |         |       |  0:45 |   0.9 |
 | Org-mode as a carrier format for modeling                  |         |       |  5:37 |   7.0 |
 | Add relational tracing support                             |         |       |  6:52 |   8.5 |
-| Split generated tests from manual tests                    |         |       |  6:02 |   7.5 |
+| Consider creating a test build for all facets              |         |       |  0:24 |   0.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -915,6 +917,142 @@ Actually the right solution is to remove this hand crafted code from
 generated files. The generated code will insert the =add_subdirectory=
 if the facet is enabled as required.
 
+*** COMPLETED Split generated tests from manual tests                 :story:
+    CLOSED: [2019-11-15 Fri 11:56]
+    :LOGBOOK:
+    CLOCK: [2019-11-14 Thu 08:13]--[2019-11-14 Thu 08:57] =>  0:44
+    CLOCK: [2019-11-13 Wed 21:33]--[2019-11-13 Wed 22:52] =>  1:19
+    CLOCK: [2019-11-13 Wed 21:31]--[2019-11-13 Wed 21:32] =>  0:01
+    CLOCK: [2019-11-13 Wed 21:21]--[2019-11-13 Wed 21:31] =>  0:10
+    CLOCK: [2019-11-13 Wed 18:24]--[2019-11-13 Wed 18:41] =>  0:17
+    CLOCK: [2019-11-13 Wed 18:10]--[2019-11-13 Wed 18:23] =>  0:13
+    CLOCK: [2019-11-13 Wed 17:44]--[2019-11-13 Wed 18:09] =>  0:25
+    CLOCK: [2019-11-13 Wed 08:22]--[2019-11-13 Wed 08:36] =>  0:14
+    CLOCK: [2019-11-13 Wed 08:00]--[2019-11-13 Wed 08:17] =>  0:17
+    CLOCK: [2019-11-12 Tue 21:23]--[2019-11-12 Tue 22:39] =>  1:16
+    CLOCK: [2019-11-12 Tue 19:25]--[2019-11-12 Tue 19:55] =>  0:30
+    CLOCK: [2019-11-08 Fri 16:35]--[2019-11-08 Fri 17:00] =>  0:25
+    :END:
+
+We need to isolate the generated tests into its own binary, to allows
+to run them in isolation from manual tests.
+
+Notes:
+
+- rename the facet to something like =generated_tests=, splitting out
+  the manual tests from it.
+- add CMake options to enable the different types of tests:
+  - =WITH_MANUAL_TESTS=
+  - =WITH_GENERATED_TESTS=
+- create different top-level targets:
+  - run all manual tests
+  - run all generated tests
+- make run all tests depend on both targets. With this it should now
+  be possible to run only the generated or the manual tests.
+- nightly:
+  - create two clones of dogen, one just for the purposes of running
+    the tests. Set the env var to point to this clone. Give it a
+    meaningful name (e.g. "clean_dogen"?)
+  - at present we only have =ctest_build=. However, we need a two step
+    build process. First we enable overrides, then we run =gad= then
+    we build all.
+  - the right solution is to have a separate process that checks out
+    dogen from git, builds CLI, rungs =gad= with overrides and then
+    commits and pushes the result. The problem though is that we need
+    to always start from master, and disregard any previous state. For
+    this we have several possibilities:
+    - create a new branch every day, using the same name. The downside
+      is that we cannot easily see previous state. However, it should
+      always be reproducible because we started from a known
+      commit. On the plus side, branch management is easy. We just
+      need to make sure appveyor and travis are ignoring this branch.
+    - create a new branch per day. This way we can easily compare
+      today with yesterday for example. However, we now need a way to
+      manage the branches - i.e. if we reach day 7 go back to day 1,
+      etc.
+    - find a way to do this using a single branch. Maybe there is a
+      way in git to "merge" branches in a way that we always start
+      with the current commit in master. However, it must be based on
+      some kind of "force" approach because we can't merge or rebase
+      (we do not want to carry state from previous commits). We need
+      to investigate what can be done within git. For example, "undo"
+      previous commit if commit has string XYZ, merge master. Note: we
+      tried implementing this approach, but there are a lot of
+      possible states the branches can be in, and its very difficult
+      to create a script that copes with all of the permutations.
+    - do not commit the state. Simply run a script that pulls latest,
+      builds CLI and calls gad with overrides. Then do a regular
+      nightly. The git pull will do nothing (so we can't see what
+      commits we have in the nightly).
+- check in the script for nightly builds.
+
+*Previous understanding*
+
+When we created the tests facet, we did not exactly follow the
+existing framework. Normally we have the concept of a project
+(e.g. say "directory settings"), which contains what is now understood
+as "destinations". In C++ these can be:
+
+- include
+- source (=src= folder)
+
+Destinations are just folders in the filesystem. These can be mapped
+to any name defined by the user. Normally, we then place facets inside
+of destinations. For example, the facet "types" can be projected into
+the include and source destinations:
+
+- =include/types=
+- =src/types=
+
+Some facets do not have a facet folder, and as such are projected
+directly onto the project directory (CMakeLists, etc).
+
+ When we added tests, we created a destination called =tests= but we
+ also created a facet called =tests=. If all had gone according to the
+ existing logic, we would have ended up with:
+
+- =tests/tests=
+
+However, we glossed over all of the above and when setting the file
+paths we used the facet directory, but when setting other things (such
+as say the CMakeLists directories), we used the destination. The net
+result is that, for all intents and purposes, it looked as if we were
+following the above setup, but somehow had ended up with:
+
+- =tests=
+
+When we recently updated the directory settings model, it all came
+undone. As a hack, we did:
+
+: #DOGEN masd.generation.cpp.tests.directory=tests_dir
+: #DOGEN masd.generation.cpp.tests_directory_name=tests_dir
+
+To maintain the existing logic, but in truth we need a proper fix. The
+right solution is to give a name to the facet which is not =tests=. It
+should really be something evocative of its functionality:
+
+- generated tests? but then we don't partition generated code anywhere
+  else. It would be useful though, so that we can easily locate
+  handcrafted tests - and even exclude them too. If we also had
+  separate CMakeFiles we could have a top-level variable that excludes
+  generated tests for compilation.
+- tests for code generated code?
+- structural tests?
+
+Basically we need a fitting name for this facet. Once found, we need
+to move all tests into this directory.
+
+Note that we cannot do the locator clean up until we sort out this mess.
+
+*** COMPLETED Use clang9 and GCC 9 in nightly and CI                  :story:
+    CLOSED: [2019-11-15 Fri 12:09]
+    :LOGBOOK:
+    CLOCK: [2019-11-15 Fri 11:54]--[2019-11-15 Fri 11:55] =>  0:01
+    :END:
+
+We seem to still be in clang 8 and gcc 8 in some places. Update the
+compilers.
+
 *** STARTED Time spent fixing emacs issues                            :story:
     :LOGBOOK:
     CLOCK: [2019-11-08 Fri 10:18]--[2019-11-08 Fri 10:43] =>  0:25
@@ -1248,132 +1386,58 @@ start and end of this transform?"
 Interestingly, this would also allow us to compare things between
 runs. The schema should be designed with this in mind.
 
-*** STARTED Split generated tests from manual tests                   :story:
+*** STARTED Consider creating a test build for all facets             :story:
     :LOGBOOK:
+    CLOCK: [2019-11-15 Fri 11:56]--[2019-11-15 Fri 12:09] =>  0:13
     CLOCK: [2019-11-15 Fri 11:42]--[2019-11-15 Fri 11:53] =>  0:11
-    CLOCK: [2019-11-14 Thu 08:13]--[2019-11-14 Thu 08:57] =>  0:44
-    CLOCK: [2019-11-13 Wed 21:33]--[2019-11-13 Wed 22:52] =>  1:19
-    CLOCK: [2019-11-13 Wed 21:31]--[2019-11-13 Wed 21:32] =>  0:01
-    CLOCK: [2019-11-13 Wed 21:21]--[2019-11-13 Wed 21:31] =>  0:10
-    CLOCK: [2019-11-13 Wed 18:24]--[2019-11-13 Wed 18:41] =>  0:17
-    CLOCK: [2019-11-13 Wed 18:10]--[2019-11-13 Wed 18:23] =>  0:13
-    CLOCK: [2019-11-13 Wed 17:44]--[2019-11-13 Wed 18:09] =>  0:25
-    CLOCK: [2019-11-13 Wed 08:22]--[2019-11-13 Wed 08:36] =>  0:14
-    CLOCK: [2019-11-13 Wed 08:00]--[2019-11-13 Wed 08:17] =>  0:17
-    CLOCK: [2019-11-12 Tue 21:23]--[2019-11-12 Tue 22:39] =>  1:16
-    CLOCK: [2019-11-12 Tue 19:25]--[2019-11-12 Tue 19:55] =>  0:30
-    CLOCK: [2019-11-08 Fri 16:35]--[2019-11-08 Fri 17:00] =>  0:25
     :END:
 
-We need to isolate the generated tests into its own binary, to allows
-to run them in isolation from manual tests.
+We can't afford to generate test code in Dogen for the continuous
+builds because we don't have enough build time to compile all of the
+generated code. This is true even when we are just generating a few
+facets (=test_data=, =types=, =tests=). However we definitely want to
+test the generated code in real models.
+
+The solution for this is to allow "variability overrides" (see [[*Add support for meta-data overrides in Dogen][Add
+support for meta-data overrides in Dogen]]). Once we have this
+functionality in place, we can then update our nightly builds.
 
 Notes:
 
-- rename the facet to something like =generated_tests=, splitting out
-  the manual tests from it.
-- add CMake options to enable the different types of tests:
-  - =WITH_MANUAL_TESTS=
-  - =WITH_GENERATED_TESTS=
-- create different top-level targets:
-  - run all manual tests
-  - run all generated tests
-- make run all tests depend on both targets. With this it should now
-  be possible to run only the generated or the manual tests.
-- nightly:
-  - create two clones of dogen, one just for the purposes of running
-    the tests. Set the env var to point to this clone. Give it a
-    meaningful name (e.g. "clean_dogen"?)
-  - at present we only have =ctest_build=. However, we need a two step
-    build process. First we enable overrides, then we run =gad= then
-    we build all.
-  - the right solution is to have a separate process that checks out
-    dogen from git, builds CLI, rungs =gad= with overrides and then
-    commits and pushes the result. The problem though is that we need
-    to always start from master, and disregard any previous state. For
-    this we have several possibilities:
-    - create a new branch every day, using the same name. The downside
-      is that we cannot easily see previous state. However, it should
-      always be reproducible because we started from a known
-      commit. On the plus side, branch management is easy. We just
-      need to make sure appveyor and travis are ignoring this branch.
-    - create a new branch per day. This way we can easily compare
-      today with yesterday for example. However, we now need a way to
-      manage the branches - i.e. if we reach day 7 go back to day 1,
-      etc.
-    - find a way to do this using a single branch. Maybe there is a
-      way in git to "merge" branches in a way that we always start
-      with the current commit in master. However, it must be based on
-      some kind of "force" approach because we can't merge or rebase
-      (we do not want to carry state from previous commits). We need
-      to investigate what can be done within git. For example, "undo"
-      previous commit if commit has string XYZ, merge master. Note: we
-      tried implementing this approach, but there are a lot of
-      possible states the branches can be in, and its very difficult
-      to create a script that copes with all of the permutations.
-    - do not commit the state. Simply run a script that pulls latest,
-      builds CLI and calls gad with overrides. Then do a regular
-      nightly. The git pull will do nothing (so we can't see what
-      commits we have in the nightly).
-- check in the script for nightly builds.
-
-*Previous understanding*
-
-When we created the tests facet, we did not exactly follow the
-existing framework. Normally we have the concept of a project
-(e.g. say "directory settings"), which contains what is now understood
-as "destinations". In C++ these can be:
-
-- include
-- source (=src= folder)
-
-Destinations are just folders in the filesystem. These can be mapped
-to any name defined by the user. Normally, we then place facets inside
-of destinations. For example, the facet "types" can be projected into
-the include and source destinations:
-
-- =include/types=
-- =src/types=
-
-Some facets do not have a facet folder, and as such are projected
-directly onto the project directory (CMakeLists, etc).
-
- When we added tests, we created a destination called =tests= but we
- also created a facet called =tests=. If all had gone according to the
- existing logic, we would have ended up with:
-
-- =tests/tests=
-
-However, we glossed over all of the above and when setting the file
-paths we used the facet directory, but when setting other things (such
-as say the CMakeLists directories), we used the destination. The net
-result is that, for all intents and purposes, it looked as if we were
-following the above setup, but somehow had ended up with:
-
-- =tests=
-
-When we recently updated the directory settings model, it all came
-undone. As a hack, we did:
-
-: #DOGEN masd.generation.cpp.tests.directory=tests_dir
-: #DOGEN masd.generation.cpp.tests_directory_name=tests_dir
-
-To maintain the existing logic, but in truth we need a proper fix. The
-right solution is to give a name to the facet which is not =tests=. It
-should really be something evocative of its functionality:
-
-- generated tests? but then we don't partition generated code anywhere
-  else. It would be useful though, so that we can easily locate
-  handcrafted tests - and even exclude them too. If we also had
-  separate CMakeFiles we could have a top-level variable that excludes
-  generated tests for compilation.
-- tests for code generated code?
-- structural tests?
-
-Basically we need a fitting name for this facet. Once found, we need
-to move all tests into this directory.
-
-Note that we cannot do the locator clean up until we sort out this mess.
+- create a test profile that enables all facets.
+- in CMake, add an override to this profile for nightlies. This could
+  be a parameter passed in from CTest.
+- run the =gad= target in CTest first, then build then run all tests.
+- because the nightly is running under our control, we can easily
+  check CDash for errors and look at the generated source to
+  investigate the problem.
+- we should setup nightlies for Windows and OSX as well.
+- remove all of the test facets from the main repo (e.g. =test_data=,
+  =tests=).
+- note that this approach will also resolve the problem with ignoring
+  tests because we don't need to have them in the version control
+  system any longer. We should remove all of the regexes ignoring
+  tests as part of this work.
+- this approach could be extended to conversion: once we fix all of
+  the issues with JSON conversion, we don't need to have the JSON
+  models in version control. We can generate them on the fly for
+  nightlies only. It will require a bit of thinking because the tests
+  are hard coded.
+- the key thing though is the overall build time must be below the
+  threshold. Maybe we can have this on a nightly, running on our own
+  hardware.
+- manually created generation tests at present do not use the
+  overrides; this means that we will now have a lot of spurious
+  differences in code generation due to this. As a result we must not
+  run the generation tests whenever we run the generated tests. Which
+  means we must somehow split these two kinds of tests and make them
+  mutually exclusive. This is best achieved by having two different
+  nightly builds:
+  - "manual" build: as is at present minus all the generated tests. We
+    do not need to ignore generated tests because there will be none
+    in git.
+  - "generated" build: only runs the generated tests. Must not run the
+    manully generated tests.
 
 *** Generated tests fail when model has nothing to test               :story:
 
@@ -1411,6 +1475,11 @@ BOOST_AUTO_TEST_CASE(test) {
 
 BOOST_AUTO_TEST_SUITE_END()
 #+end_src
+
+The current workaround is to disable generated tests whilst there are
+no types to test. This is not ideal because if we introduce testable
+types we will probably forget to remove the disabling, but its
+arguably better than adding a fake type.
 
 *** Code coverage has not been updated since September                :story:
 
@@ -1463,60 +1532,6 @@ should still create a profile and model all tests as proper entities
 instead of bypassing the modeling system. We want to move to a world
 were *all* files in the system can be attributable to modeling
 entities.
-
-*** Consider creating a test build for all facets                     :story:
-
-We can't afford to generate test code in Dogen for the continuous
-builds because we don't have enough build time to compile all of the
-generated code. This is true even when we are just generating a few
-facets (=test_data=, =types=, =tests=). However we definitely want to
-test the generated code in real models.
-
-The solution for this is to allow "variability overrides" (see [[*Add support for meta-data overrides in Dogen][Add
-support for meta-data overrides in Dogen]]). Once we have this
-functionality in place, we can then update our nightly builds.
-
-Notes:
-
-- create a test profile that enables all facets.
-- in CMake, add an override to this profile for nightlies. This could
-  be a parameter passed in from CTest.
-- run the =gad= target in CTest first, then build then run all tests.
-- because the nightly is running under our control, we can easily
-  check CDash for errors and look at the generated source to
-  investigate the problem.
-- we should setup nightlies for Windows and OSX as well.
-- remove all of the test facets from the main repo (e.g. =test_data=,
-  =tests=).
-- note that this approach will also resolve the problem with ignoring
-  tests because we don't need to have them in the version control
-  system any longer. We should remove all of the regexes ignoring
-  tests as part of this work.
-- this approach could be extended to conversion: once we fix all of
-  the issues with JSON conversion, we don't need to have the JSON
-  models in version control. We can generate them on the fly for
-  nightlies only. It will require a bit of thinking because the tests
-  are hard coded.
-- the key thing though is the overall build time must be below the
-  threshold. Maybe we can have this on a nightly, running on our own
-  hardware.
-- manually created generation tests at present do not use the
-  overrides; this means that we will now have a lot of spurious
-  differences in code generation due to this. As a result we must not
-  run the generation tests whenever we run the generated tests. Which
-  means we must somehow split these two kinds of tests and make them
-  mutually exclusive. This is best achieved by having two different
-  nightly builds:
-  - "manual" build: as is at present minus all the generated tests. We
-    do not need to ignore generated tests because there will be none
-    in git.
-  - "generated" build: only runs the generated tests. Must not run the
-    manully generated tests.
-
-*** Use clang9 and GCC 9 in nightly and CI                            :story:
-
-We seem to still be in clang 8 and gcc 8 in some places. Update the
-compilers.
 
 *** Create tests for variability overrides                            :story:
 
