--- a/doc/agile/v1/sprint_backlog_19.org
+++ b/doc/agile/v1/sprint_backlog_19.org
@@ -12,30 +12,30 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-11-15 Fri 12:38]
+#+CAPTION: Clock summary at [2019-11-15 Fri 15:09]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *81:04* |       |       | 100.0 |
+| *Total time*                                               | *81:37* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 81:04   |       |       | 100.0 |
-| Active                                                     |         | 81:04 |       | 100.0 |
+| Stories                                                    | 81:37   |       |       | 100.0 |
+| Active                                                     |         | 81:37 |       | 100.0 |
 | Edit release notes for previous sprint                     |         |       |  3:36 |   4.4 |
 | Create a demo and presentation for previous sprint         |         |       |  1:39 |   2.0 |
 | Time spent producing coding videos                         |         |       |  2:22 |   2.9 |
-| Sprint and product backlog grooming                        |         |       |  6:09 |   7.6 |
+| Sprint and product backlog grooming                        |         |       |  6:09 |   7.5 |
 | Remove test model sanitizer                                |         |       |  0:20 |   0.4 |
 | Remove master headers                                      |         |       |  1:12 |   1.5 |
 | Fix the issues with tests in reference model               |         |       |  3:53 |   4.8 |
 | Update static strings to string views                      |         |       |  1:15 |   1.5 |
 | ODB include directories is incorrect                       |         |       |  1:43 |   2.1 |
-| Create a "modeling" report                                 |         |       |  4:56 |   6.1 |
+| Create a "modeling" report                                 |         |       |  4:56 |   6.0 |
 | Move visual studio related options to top profile          |         |       |  0:17 |   0.3 |
 | Fix incorrect message keyword when detecting ODB includes  |         |       |  0:29 |   0.6 |
 | Meta-data keys are in the inverse order                    |         |       |  0:39 |   0.8 |
 | Creating reference cycles produces strange errors          |         |       |  5:32 |   6.8 |
 | Error on duplicate references                              |         |       |  0:26 |   0.5 |
-| Generate model dependency graph                            |         |       |  1:55 |   2.4 |
+| Generate model dependency graph                            |         |       |  1:55 |   2.3 |
 | Make the building of the relational model conditional      |         |       |  0:23 |   0.5 |
 | Make all transform contexts code-generated                 |         |       |  0:08 |   0.2 |
 | Tracer numbering of dumped models is incorrect             |         |       |  0:26 |   0.5 |
@@ -47,12 +47,13 @@
 | Split generated tests from manual tests                    |         |       |  5:51 |   7.2 |
 | Use clang9 and GCC 9 in nightly and CI                     |         |       |  0:01 |   0.0 |
 | Time spent fixing emacs issues                             |         |       |  1:44 |   2.1 |
-| Move registrar into assets                                 |         |       |  5:29 |   6.8 |
+| Move registrar into assets                                 |         |       |  5:29 |   6.7 |
 | Upgrade to boost 1.70                                      |         |       | 10:00 |  12.3 |
 | Setup laptop to work on dogen                              |         |       |  0:45 |   0.9 |
 | Org-mode as a carrier format for modeling                  |         |       |  5:37 |   6.9 |
-| Add relational tracing support                             |         |       |  6:52 |   8.5 |
+| Add relational tracing support                             |         |       |  6:52 |   8.4 |
 | Consider creating a test build for all facets              |         |       |  0:52 |   1.1 |
+| Code coverage has not been updated since September         |         |       |  0:33 |   0.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -1440,6 +1441,16 @@ Notes:
   - "generated" build: only runs the generated tests. Must not run the
     manully generated tests.
 
+*** STARTED Code coverage has not been updated since September        :story:
+    :LOGBOOK:
+    CLOCK: [2019-11-15 Fri 15:03]--[2019-11-15 Fri 15:09] =>  0:06
+    CLOCK: [2019-11-15 Fri 14:35]--[2019-11-15 Fri 15:02] =>  0:27
+    :END:
+
+For some reason we have not been generating coverage reports for a
+couple of months. In addition, don't submit CI to both coveralls and
+codecov. We want CI to go to coveralls and nightlies to go to codecov.
+
 *** Serialisation forward declarations are cyclical                   :story:
 
 At present we are including the serialisation forward declaration from
@@ -1488,11 +1499,6 @@ The current workaround is to disable generated tests whilst there are
 no types to test. This is not ideal because if we introduce testable
 types we will probably forget to remove the disabling, but its
 arguably better than adding a fake type.
-
-*** Code coverage has not been updated since September                :story:
-
-For some reason we have not been generating coverage reports for a
-couple of months.
 
 *** Create a "manual tests" stereotype with profiles                  :story:
 
